# mediapipe_cmake

./: .gitignore  CMakeLists.txt  README.md  build_32_and_64.sh  build_android_arm32.sh  build_android_arm64.sh
data/video/: readme.txt
face_detector/: CMakeLists.txt
face_detector/demo/: face_detector_demo.cpp
face_detector/include/: face_detector.h
face_detector/models/: face_detection_full_range.mnn  face_detection_short_range.mnn
face_detector/src/: face_detector.cpp
face_landmarker/: CMakeLists.txt
face_landmarker/demo/: face_landmarker_demo.cpp
face_landmarker/include/: face_landmark.h  face_landmark_c_api.h
face_landmarker/models/: face_landmark468.mnn
face_landmarker/src/: face_landmark.cpp  face_landmark_c_api.cpp  face_landmark_impl.cpp  face_landmark_impl.h
face_landmarker/src/face_geometry/: ProcrustesSolver.cpp  ProcrustesSolver.h  geometry_pipeline.cpp  geometry_pipeline.h  geometry_utils.cpp  geometry_utils.h
face_landmarker/vis_demo/: viz_face_by_open3d.py
hair_segmenter/: CMakeLists.txt  readme.md
hair_segmenter/demo/: hair_segmenter_demo.cpp
hair_segmenter/include/: hair_segmenter.h
hair_segmenter/models/: hair_segmentation.tflite
hair_segmenter/src/: hair_segmenter.cpp
hand_detector/: CMakeLists.txt
hand_detector/demo/: hand_detector_demo.cpp
hand_detector/include/: hand_detector.h
hand_detector/src/: hand_detector.cpp
hand_landmarker/: CMakeLists.txt
hand_landmarker/demo/: hand_landmark_c_api_demo.cpp  hand_landmark_demo.cpp
hand_landmarker/include/: hand_landmark.h  hand_landmark_c_api.h
hand_landmarker/src/: hand_landmark.cpp  hand_landmark_c_api.cpp  hand_landmark_impl.cpp  hand_landmark_impl.h
hand_landmarker/vis_demo/: viz_hand_by_open3d.py
holistic_tracker/: CMakeLists.txt  readme.md
holistic_tracker/demo/: holistic_tracker_demo.cpp
holistic_tracker/include/: holistic_tracker.h
holistic_tracker/models/: hand_recrop.mnn
holistic_tracker/src/: face_processing.cpp  face_processing.h  hand_processing.cpp  hand_processing.h  holistic_tracker.cpp
interactive_segmenter/: CMakeLists.txt  reproduce_note.md
interactive_segmenter/demo/: interactive_segmenter_demo.cpp
interactive_segmenter/include/: interactive_segmenter.h
interactive_segmenter/src/: interactive_segmenter.cpp
iris_tracker/: CMakeLists.txt
iris_tracker/demo/: iris_tracker_demo.cpp
iris_tracker/include/: iris_tracker.h
iris_tracker/models/: iris_landmark.mnn
iris_tracker/src/: iris_tracker.cpp  iris_tracker_impl.cpp  iris_tracker_impl.h
pose_detector/: CMakeLists.txt
pose_detector/demo/: pose_detector_demo.cpp
pose_detector/include/: pose_detector.h
pose_detector/src/: pose_detector.cpp
pose_landmarker/: CMakeLists.txt
pose_landmarker/demo/: pose_landmark_demo.cpp
pose_landmarker/include/: pose_landmark.h  pose_landmark_c_api.h
pose_landmarker/interface/: pose_landmark.def  pose_landmark_c.cpp  pose_landmark_c.h
pose_landmarker/models/: pose_landmark_full_v2.tflite
pose_landmarker/src/: pose_landmark.cpp  pose_landmark_c_api.cpp  pose_landmark_impl.cpp  pose_landmark_impl.h
pose_landmarker/vis_demo/: viz_pose_by_open3d.py
selfie_segmenter/: CMakeLists.txt  readme.md
selfie_segmenter/demo/: selfie_segmenter_demo.cpp
selfie_segmenter/include/: selfie_segmenter.h
selfie_segmenter/src/: selfie_segmenter.cpp
utils/: base_type.h  common.cpp  common.h  non_max_suppression.cpp  non_max_suppression.h  smoothing.cpp  smoothing.h  ssd_anchors.cpp  ssd_anchors.h  ssd_post_process.cpp  ssd_post_process.h
